--- a/santa.html
+++ b/santa.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to fit=no">
-    <link rel="stylesheet" type="text/css" href="css/master2.css">
+    <link rel="stylesheet" type="text/css" href="/css/master2.css">
     <title></title>
   </head>
   <body>
