--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title></title>
   </head>
   <body>
-    <a href="santa.html">
+    <a href="html/santa.html">
           <span></span>
           <span></span>
           <span></span>
