--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to fit=no">
 
-    <link rel="stylesheet" type="text/css" href="/css/master.css">
+    <link rel="stylesheet" type="text/css" href="css/master.css">
 
     <title></title>
   </head>
   <body>
-    <a href="html/santa.html">
+    <a href="santa.html">
           <span></span>
           <span></span>
           <span></span>
