--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to fit=no">
-
-    <link rel="stylesheet" type="text/css" href="css/master.css">
-
-    <title></title>
+    <title>Merry Christmas!</title>
+     <link rel="stylesheet" type="text/css" href="css/master.css">
   </head>
   <body>
     <a href="santa.html">
